<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.scan.DetectionActivity">


    <LinearLayout
        android:id="@+id/content_begin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/mushroom" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mulai_deteksi_jamur"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/content_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/warning"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="@+id/content_result">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/attention"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_msg"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_result_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/mushroom_name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_result_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/accuracy"
                android:textAlignment="center"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_more_information"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="30dp"
                android:backgroundTint="@color/sea_green"
                android:text="@string/more_information" />


            <!--        <capstone.project.mushymatch.view.custom.button.CustomButtonMoreInformation-->
            <!--            android:id="@+id/btn_more_information"-->
            <!--            android:layout_width="300dp"-->
            <!--            android:layout_height="60dp"-->
            <!--            android:layout_gravity="center_horizontal"-->
            <!--            android:text="@string/more_information" />-->

        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/flashlight"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintGuide_percent="0.88" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <ImageView
            android:id="@+id/importImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/import_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_import_img" />

        <ImageView
            android:id="@+id/captureImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/ambil_gambar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_scan" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@string/kembali"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_return" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>