<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.about.MushroomInformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_action_bar_background"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:shimmer_auto_start="true"
        app:shimmer_base_alpha="0.3"
        app:shimmer_direction="left_to_right"
        app:shimmer_duration="500"
        app:shimmer_repeat_count="@android:integer/config_shortAnimTime"
        app:shimmer_repeat_delay="500"
        app:shimmer_shape="linear"
        app:shimmer_tilt="0"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <include layout="@layout/layout_mushroom_information" />
        </ScrollView>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintVertical_bias="0.019"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/image_mushroom"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/mushroom_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sample_mushroom"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_mushroom_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mushroom_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mushroom_scientific_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/scientific_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/lb_edible"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp"
                android:text="@string/status"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/image_mushroom"
                app:layout_constraintStart_toStartOf="@+id/image_mushroom"
                app:layout_constraintTop_toTopOf="@+id/image_mushroom"
                app:layout_constraintVertical_bias="0.92" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/smith_apple"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:text="@string/desc"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_100"
                android:paddingHorizontal="8dp"
                android:text="@string/description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_habitat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/smith_apple"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:text="@string/habitat"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_desc_habit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_100"
                android:paddingHorizontal="8dp"
                android:text="@string/description"
                android:textSize="14sp" />

<!--            <RelativeLayout-->
<!--                android:id="@+id/layout_habitat"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:background="@color/gray_100"-->
<!--                android:paddingHorizontal="8dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/tv_habitat"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="@color/gray_200"-->
<!--                    android:paddingVertical="8dp"-->
<!--                    android:text="@string/habitat"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="24sp"-->
<!--                    android:textStyle="bold" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/iv_habitat"-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_marginEnd="12dp"-->
<!--                    android:contentDescription="@string/more"-->
<!--                    android:src="@drawable/ic_down" />-->
<!--            </RelativeLayout>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_desc_habit"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@color/gray_100"-->
<!--                android:paddingHorizontal="8dp"-->
<!--                android:text="@string/description"-->
<!--                android:textSize="14sp"-->
<!--                android:visibility="gone" />-->

            <RelativeLayout
                android:id="@+id/layout_recipes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/smith_apple"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_recipes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking_recipes"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_recipes"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/next_page"
                    android:src="@drawable/next_page" />
            </RelativeLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>